--- a/index.html
+++ b/index.html
@@ -5,62 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="logo" href="./index.html"><span class="part-logo">Web</span>Studio</a>
+        <ul class="site-nav">
           <li>
-            <a href="">Студія</a>
+            <a class="link" href="">Студія</a>
           </li>
           <li>
-            <a href="">Портфоліо</a>
+            <a class="link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!-- Hero -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-tittle">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <!-- Benefits -->
-      <section>
-        <h2>Переваги</h2>
+      <section class="benefits">
+        <h2 class="section-title">Переваги</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -69,51 +72,42 @@
         </ul>
       </section>
       <!-- What we do -->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="specialization">
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href=""
-              ><img src="./images/img.jpg" alt="десктопні додатки" width="370"
-            /></a>
+            <a href=""><img src="./images/img.jpg" alt="десктопні додатки" width="370"></a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/img1.jpg" alt="мобільні додатки" width="370"
-            /></a>
+            <a href=""><img src="./images/img1.jpg" alt="мобільні додатки" width="370"></a>
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/img2.jpg"
-                alt="дизайнерські рішення"
-                width="370"
-            /></a>
+            <a href=""></a><img src="./images/img2.jpg" alt="дизайнерські рішення" width="370"></a>
           </li>
         </ul>
       </section>
       <!-- Our team -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/pers1.jpg" alt="фото спеціаліста" width="270" />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="team-title">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/pers2.jpg" alt="фото спеціаліста" width="270" />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-title">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/pers3.jpg" alt="фото спеціаліста" width="270" />
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-title">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/pers4.jpg" alt="фото спеціаліста" width="270" />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-title">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -121,19 +115,19 @@
     </main>
     <!-- Footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"><span class="part-logo">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="footer-list">
           <li>
-            <a
+            <a class="link adress"
               href="https://goo.gl/maps/mhP16A6NYwnRhTqU8"
               target="_blank"
               rel="noreferrer noopener nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
