--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
       </ul>
     </header>
     <main>
+      <section class="portfolio">
         <h1>Наші роботи</h1>
             <ul class="list-buttons">
                 <li><button type="button">Усі</button></li>
@@ -41,7 +42,6 @@
                 <li><button type="button">Дизайн</button></li>
                 <li><button type="button">Маркетинг</button></li>
             </ul>
-        <section>
             <ul class="project-list">
                 <li>
                     <a href="">
