--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- Header -->
     <header>
-      <nav>
+      <nav class="container">
         <a class="logo" href="./index.html"><span class="part-logo">Web</span>Studio</a>
         <ul class="site-nav">
           <li>
@@ -26,11 +27,11 @@
             <a class="link" href="">Контакти</a>
           </li>
         </ul>
-      </nav>
       <ul class="contact">
         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </nav>
     </header>
     <main>
       <!-- Hero -->
@@ -40,77 +41,83 @@
       </section>
       <!-- Benefits -->
       <section class="benefits">
-        <h2 class="section-title">Переваги</h2>
-        <ul>
-          <li>
-            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Переваги</h2>
+                    <ul>
+                    <li>
+                      <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                      <p>
+                        Ідейні міркування, і навіть початок повсякденної роботи з
+                        формування позиції.
+                      </p>
+                    </li>
+                    <li>
+                      <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+                      <p>
+                        Завдання організації, особливо рамки і місце навчання кадрів тягне
+                        у себе.
+                      </p>
+                    </li>
+                    <li>
+                      <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+                      <p>
+                        Так само консультація з широким активом значною мірою зумовлює.
+                      </p>
+                    </li>
+                    <li>
+                      <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                      <p>
+                        Значимість цих проблем настільки очевидна, що реалізація планових
+                        завдань.
+                      </p>
+                    </li>
+                  </ul>
+        </div>
       </section>
       <!-- What we do -->
       <section class="specialization">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <a href=""><img src="./images/img.jpg" alt="десктопні додатки" width="370"></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/img1.jpg" alt="мобільні додатки" width="370"></a>
-          </li>
-          <li>
-            <a href=""></a><img src="./images/img2.jpg" alt="дизайнерські рішення" width="370"></a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul>
+            <li>
+              <a href=""><img src="./images/img.jpg" alt="десктопні додатки" width="370"></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/img1.jpg" alt="мобільні додатки" width="370"></a>
+            </li>
+            <li>
+              <a href=""></a><img src="./images/img2.jpg" alt="дизайнерські рішення" width="370"></a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team -->
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/pers1.jpg" alt="фото спеціаліста" width="270" />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/pers2.jpg" alt="фото спеціаліста" width="270" />
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/pers3.jpg" alt="фото спеціаліста" width="270" />
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/pers4.jpg" alt="фото спеціаліста" width="270" />
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul>
+            <li>
+              <img src="./images/pers1.jpg" alt="фото спеціаліста" width="270" />
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p>Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/pers2.jpg" alt="фото спеціаліста" width="270" />
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/pers3.jpg" alt="фото спеціаліста" width="270" />
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="./images/pers4.jpg" alt="фото спеціаліста" width="270" />
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
