--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- Header -->
     <header>
-      <nav>
+      <nav class="container">
         <a class="logo" href="./index.html"><span class="part-logo">Web</span>Studio</a>
         <ul class="site-nav">
           <li>
@@ -26,87 +27,90 @@
             <a class="link" href="">Контакти</a>
           </li>
         </ul>
-      </nav>
+
       <ul class="contact">
         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </nav>
     </header>
     <main>
       <section class="portfolio">
-        <h1>Наші роботи</h1>
-            <ul class="list-buttons">
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+        <div class="container">
+          <h1>Наші роботи</h1>
+              <ul class="list-buttons">
+              <li><button class="button" type="button">Усі</button></li>
+              <li><button class="button" type="button">Веб-сайти</button></li>
+              <li><button class="button" type="button">Додатки</button></li>
+              <li><button class="button" type="button">Дизайн</button></li>
+              <li><button class="button" type="button">Маркетинг</button></li>
             </ul>
-            <ul class="project-list">
-                <li>
-                    <a href="">
-                        <img src="./images/project1.jpg" alt="тенокряк">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project2.jpg" alt="постер">
-                        <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project3.jpg" alt="ресторан">
-                        <h2>Ресторан Seafood</h2>
-                        <p>Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project4.jpg" alt="проект">
-                        <h2>Проєкт Prime</h2>
-                        <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project5.jpg" alt="проект">
-                        <h2>Проєкт Boxes</h2>
-                        <p>Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project6.jpg" alt="натхнення без кордонів">
-                        <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project7.jpg" alt="видання">
-                        <h2>Видання Limited Edition</h2>
-                        <p>Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project8.jpg" alt="проект">
-                        <h2>Проєкт LAB</h2>
-                        <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/project9.jpg" alt="зростаючий бізнес">
-                        <h2>Growing Business</h2>
-                        <p>Додаток</p>
-                    </a>
-                </li>
-            </ul>
+          <ul class="project-list">
+            <li>
+              <a href="">
+                <img src="./images/project1.jpg" alt="тенокряк">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project2.jpg" alt="постер">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project3.jpg" alt="ресторан">
+                <h2>Ресторан Seafood</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project4.jpg" alt="проект">
+                <h2>Проєкт Prime</h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project5.jpg" alt="проект">
+                <h2>Проєкт Boxes</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project6.jpg" alt="натхнення без кордонів">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project7.jpg" alt="видання">
+                <h2>Видання Limited Edition</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project8.jpg" alt="проект">
+                <h2>Проєкт LAB</h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/project9.jpg" alt="зростаючий бізнес">
+                <h2>Growing Business</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
         </section>
     </main>
     <!-- Footer -->
